@@ -1981,9 +1981,23 @@ HOOK_METHOD(Entity_Player, TriggerRoomClear, () -> void) {
 				}
 			}
 		}
+
 	}
 
 	super();
+
+	const int callbackid2 = 1138;
+	if (CallbackState.test(callbackid2 - 1000)) {
+		lua_State* L = g_LuaEngine->_state;
+		lua::LuaStackProtector protector(L);
+
+		lua_rawgeti(L, LUA_REGISTRYINDEX, g_LuaEngine->runCallbackRegistry->key);
+
+		lua::LuaResults postResult = lua::LuaCaller(L).push(callbackid2)
+			.push(*this->GetVariant())
+			.push(this, lua::Metatables::ENTITY_PLAYER)
+			.call(1);
+	}
 }
 
 // MC_PLAYER_GET_ACTIVE_MAX_CHARGE (below) can get triggered multiple times in a single call to some functions.
