@@ -52,6 +52,7 @@ ModCallbacks.MC_GET_SHOP_ITEM_PRICE = 1066
 ModCallbacks.MC_PLAYER_GET_HEALTH_TYPE = 1067
 ModCallbacks.MC_PRE_ROOM_TRIGGER_CLEAR = 1068
 ModCallbacks.MC_PRE_PLAYER_TRIGGER_ROOM_CLEAR = 1069
+ModCallbacks.MC_POST_PLAYER_TRIGGER_ROOM_CLEAR = 1138 --oops
 ModCallbacks.MC_PRE_RESTOCK_SHOP = 1070
 ModCallbacks.MC_POST_RESTOCK_SHOP = 1071
 ModCallbacks.MC_PLAYER_GET_ACTIVE_MAX_CHARGE = 1072
