@@ -24,15 +24,17 @@ Additions:
 	- MC_PRE_BED_SLEEP(Player, Bed)
 		Triggers on bed collision and before playing sleep sequence.
 		Return true to cancel vanilla behavior.
-	- PRE_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
+	- MC_PRE_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
 		Fires when Entity:SetColor is called
 		Takes an EntityType as its optional argument. 
 		Return a color to override the color. The overridden color is passed into MC_POST_ENTITY_SET_COLOR.
 		Return false to cancel the color change. Prevents MC_POST_ENTITY_SET_COLOR from firing.
 		This only fires for `Entity:SetColor` and does not fire when changing the entity's color directly.
-	- POST_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
+	- MC_POST_ENTITY_SET_COLOR(Entity entity, int duration, int priority, bool fadeOut, bool share)
 		Fires after an entity's color is changed via Entity:SetColor
 		This only fires for `Entity:SetColor` and does not fire when changing the entity's color directly.
+	- MC_POST_PLAYER_TRIGGER_ROOM_CLEAR
+		Previously missing counterpart to MC_PRE_PLAYER_TRIGGER_ROOM_CLEAR
 * New Enums:
 	- DoorMask
 * Isaac:
